# market-agent

./: .gitignore  TEST.md
market-apis/: .gitignore  CONTEXT.md  PROMPT.md  README.md  docker-compose.yml  pyproject.toml  pyrightconfig.json  test_lenovo_compare.py  test_lenovo_serpapi.py
market-apis/alembic/: env.py
market-apis/alembic/versions/: 0001_initial_schema.py  0002_matching_model_predictions.py  0003_matching_dataset_campaigns.py
market-apis/app/: __init__.py  config.py  database.py  embeddings.py  link_guard.py  main.py  matching.py  matching_dataset.py  matching_labeler.py  matching_model.py  matching_runtime.py  matching_semantic.py  models.py  normalization.py  ranking.py  routing.py  scoring.py  semantic.py  services.py
market-apis/app/scrapers/: __init__.py  amazon_serpapi.py  base.py  fravega.py  megatone.py  registry.py  search_index_mercado_libre.py  url_analyzer.py  vtex.py
market-apis/artifacts/matching/: model-v5.joblib  model.joblib  reranker_bge_v2_m3_scores.joblib  reranker_score_cache.joblib  semantic_embedding_cache_e5_small.joblib  semantic_embedding_cache_minilm.joblib
market-apis/tests/: test_agent_search.py  test_alembic.py  test_config.py  test_database.py  test_embeddings.py  test_link_guard.py  test_matching.py  test_matching_dataset.py  test_matching_labeler.py  test_matching_model.py  test_matching_runtime.py  test_mercado_libre_scraper.py  test_normalization.py  test_ranking.py  test_routing.py  test_scoring.py  test_search_everywhere.py  test_semantic_matcher.py  test_serpapi.py  test_store_adapters.py  typing_helpers.py
(+54 files in other folders)
